Cambios en Swagger. Listo para iniciar la fase de autenticacion
